exception mobile overflow fix

--- a/src/main/resources/static/css/checkout.css
+++ b/src/main/resources/static/css/checkout.css
@@ -32,6 +32,7 @@
     line-height: 20px;
     padding-top: 12px;
     text-align: center;
+    overflow-wrap: anywhere;
 }
 
 #payment-element {
